@@ -23,6 +23,7 @@
   starting a new column - see .csshrc doc for "max_host_menu_items".
   This is until Tk allows for scrollable menus
 * Amend default key_addhost from 'Control-plus' to 'Control-Shift-plus'
+* Add in a 'default' cluster tag, used when no tags provided on command line
 
 2009-03-26 Duncan Ferguson <duncan_ferguson@user.sf.net> - v3.25-1
 
